<resources>
    <string name="app_name">MyFamilyApp</string>
    <string name="security_string">Security</string>
    <string name="sos_string">SOS</string>
    <string name="sos_message">In case of emergency, keep telling family members to contact me</string>
    <string name="guard_string">Guard</string>
    <string name="guard_message">In case of emergency, keep telling family members to contact me</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">profile</string>
    <string name="MyFamily">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_time_sample">16:40</string>
    <string name="string_address_sample">Karnal Times House, Chaura Bazaar, Opposite Amritdhara Hospital, Karnal, Haryana-132001</string>
    <string name="string_battery_percentage">90%</string>
    <string name="string_distance_sample">220M</string>
    <string name="string_wifi">WiFi</string>
    <string name="continue_with_google">continue with google</string>
    <string name="web_client_id_auth">id</string>
    <string name="enter_email_id_of_whom_you_want_to_invite">Enter email id of whom you want to invite</string>
    <string name="send_invite">Send Invite</string>
    <string name="your_invites">Your Invites:</string>
    <string name="accept">Accept</string>
</resources>