<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <TextView
        android:id="@+id/tvSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/security_string"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvPink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/card_red"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecurity" />

    <TextView
        android:id="@+id/tvSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/sos_string"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mcvPink_card"
        app:layout_constraintTop_toTopOf="@+id/mcvPink_card" />


    <TextView
        android:id="@+id/tvSOSMessage"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/sos_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ivSOS"
        app:layout_constraintStart_toStartOf="@+id/mcvPink_card"
        app:layout_constraintTop_toBottomOf="@+id/tvSOS" />

    <ImageView
        android:id="@+id/ivSOS"
        android:layout_width="@dimen/dimen_96"
        android:layout_height="@dimen/dimen_96"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@+id/mcvPink_card"
        app:layout_constraintEnd_toEndOf="@+id/mcvPink_card"
        app:layout_constraintTop_toTopOf="@+id/mcvPink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvGreen_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:layout_margin="@dimen/dimen_16"
        app:cardBackgroundColor="@color/card_cyan"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvPink_card" />

    <TextView
        android:id="@+id/tvGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimen_16"
        android:text="@string/guard_string"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mcvGreen_card"
        app:layout_constraintTop_toTopOf="@+id/mcvGreen_card" />

    <TextView
        android:id="@+id/tvGuardMessage"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:text="@string/guard_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/mcvGreen_card"
        app:layout_constraintEnd_toStartOf="@id/ivGuard"
        app:layout_constraintStart_toStartOf="@+id/mcvGreen_card"
        app:layout_constraintTop_toBottomOf="@+id/tvGuard" />

    <ImageView
        android:id="@+id/ivGuard"
        android:layout_width="@dimen/dimen_96"
        android:layout_height="@dimen/dimen_96"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@+id/mcvGreen_card"
        app:layout_constraintEnd_toEndOf="@+id/mcvGreen_card"
        app:layout_constraintTop_toTopOf="@+id/mcvGreen_card" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/enter_email_id_of_whom_you_want_to_invite"
        app:layout_constraintBottom_toBottomOf="@id/bt_send_invite"
        app:layout_constraintEnd_toStartOf="@id/bt_send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvGreen_card" />

    <Button
        android:id="@+id/bt_send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/send_invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcvGreen_card" />


    <TextView
        android:id="@+id/tv_your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/your_invites"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>